--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <h1>Welcome to My Website</h1>
     <h1>Still under construction..</h1>
     <p>This is the homepage of my website.</p>
+    <div id="like_button_container"></div>
+
     <ul>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
+    
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="like_button.js"></script>
+
   </body>
 </html>
