--- a/index.html
+++ b/index.html
@@ -1,27 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MICHELLE SAMSON</title>
-  </head>
-  <body>
-    <h1>Welcome to My Website</h1>
-    <h1>Still under construction..</h1>
-    <p>This is the homepage of my website.</p>
-    <div id="like_button_container"></div>
+<head>
+	<title>MICHELLE SAMSON</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+	<header>
+		<h1>Welcome to My Personal Website</h1>
+		<nav>
+			<ul>
+				<li><a href="#about">About Me</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact Me</a></li>
+			</ul>
+		</nav>
+	</header>
 
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+	<main>
+		<section id="about">
+			<h2>About Me</h2>
+			<p>Insert your bio here.</p>
+		</section>
 
-    <!-- Load our React component. -->
-    <script src="like_button.js"></script>
+		<section id="portfolio">
+			<h2>Portfolio</h2>
+			<ul>
+				<li><a href="#">Project 1</a></li>
+				<li><a href="#">Project 2</a></li>
+				<li><a href="#">Project 3</a></li>
+			</ul>
+		</section>
 
-  </body>
+		<section id="contact">
+			<h2>Contact Me</h2>
+			<form>
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name"><br>
+
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email"><br>
+
+				<label for="message">Message:</label>
+				<textarea id="message" name="message"></textarea><br>
+
+				<input type="submit" value="Submit">
+			</form>
+		</section>
+	</main>
+
+	<footer>
+		<p>Copyright © 2023</p>
+	</footer>
+</body>
 </html>
